# object-rainbow

./: .gitattributes  Cargo.toml  TODO.md  cloc.sh  codegen.sh  hack.sh
.github/workflows/: pages.yml  publish.yml
crates/object-rainbow/: Cargo.toml
crates/object-rainbow-amt/: Cargo.toml
crates/object-rainbow-amt/src/: construct.rs  lib.rs
crates/object-rainbow-append-tree/: Cargo.toml
crates/object-rainbow-append-tree/src/: lib.rs
crates/object-rainbow-apply/: Cargo.toml
crates/object-rainbow-apply/src/: amt.rs  hamt.rs  lib.rs  point.rs  remap.rs  skip.rs  trie.rs  unique_diffs.rs
crates/object-rainbow-array-map/: Cargo.toml
crates/object-rainbow-array-map/src/: lib.rs
crates/object-rainbow-chain-tree/: Cargo.toml
crates/object-rainbow-derive/: Cargo.toml
crates/object-rainbow-derive/src/: lib.rs
crates/object-rainbow-encrypted/: Cargo.toml
crates/object-rainbow-encrypted-store/: Cargo.toml
crates/object-rainbow-encrypted/examples/: test.rs
crates/object-rainbow-encrypted/src/: lib.rs
crates/object-rainbow-fetchall/: Cargo.toml
crates/object-rainbow-fetchall/src/: lib.rs
crates/object-rainbow-hamt/: Cargo.toml
crates/object-rainbow-hamt/src/: lib.rs
crates/object-rainbow-history/: Cargo.toml
crates/object-rainbow-history-store/: Cargo.toml
crates/object-rainbow-history-store/src/: lib.rs
crates/object-rainbow-history/examples/: split.rs  table.rs
crates/object-rainbow-history/src/: amt.rs  enforce_unique.rs  hamt.rs  lib.rs  remap.rs  skip.rs  unique_diffs.rs
crates/object-rainbow-json/: Cargo.toml
crates/object-rainbow-json/src/: distributed.rs  lib.rs
crates/object-rainbow-kubo-raw/: Cargo.toml
crates/object-rainbow-kubo-raw/examples/: encrypted.rs
crates/object-rainbow-local-map/: Cargo.toml
crates/object-rainbow-local-map/src/: lib.rs
crates/object-rainbow-marshall/: Cargo.toml
crates/object-rainbow-parse-prefix/: Cargo.toml
crates/object-rainbow-point/: Cargo.toml
crates/object-rainbow-schema/: Cargo.toml
crates/object-rainbow-store/: Cargo.toml
crates/object-rainbow-store-opendal/: Cargo.toml
crates/object-rainbow-trie/: Cargo.toml
crates/xtask-release/: Cargo.toml
docs/: TODO.md  Tries.md  book.toml
docs/src/: SUMMARY.md  TODO.md  Tries.md
examples/: derive.rs  map.rs
object-rainbow/: Cargo.toml
object-rainbow-amt/: Cargo.toml
object-rainbow-amt-set/: Cargo.toml
object-rainbow-amt-set/src/: lib.rs
object-rainbow-amt/src/: construct.rs  lib.rs
object-rainbow-append-tree/: Cargo.toml
object-rainbow-append-tree/src/: lib.rs
object-rainbow-array-map/: Cargo.toml
object-rainbow-array-map/src/: lib.rs
object-rainbow-chain-tree/: Cargo.toml
object-rainbow-chain-tree/src/: lib.rs
object-rainbow-derive/: Cargo.toml
object-rainbow-derive/src/: contains_generics.rs  lib.rs
object-rainbow-encrypted/: Cargo.toml
object-rainbow-encrypted-store/src/: lib.rs
object-rainbow-encrypted/examples/: test.rs
object-rainbow-encrypted/src/: lib.rs
object-rainbow-fetchall/: Cargo.toml
object-rainbow-fetchall/examples/: test.rs
object-rainbow-fetchall/src/: lib.rs
object-rainbow-hamt/: Cargo.toml
object-rainbow-hamt/src/: lib.rs
object-rainbow-history/: Cargo.toml
object-rainbow-history-store/: Cargo.toml
object-rainbow-history-store/examples/: trie-opendal.rs
object-rainbow-history-store/src/: lib.rs
object-rainbow-history/examples/: split.rs  table.rs
object-rainbow-history/src/: amt.rs  ascii.rs  enforce_unique.rs  hamt.rs  hashed.rs  lib.rs  remap.rs  skip.rs  trie.rs  unique_diffs.rs
object-rainbow-json/: Cargo.toml
object-rainbow-json/src/: distributed.rs  lib.rs
object-rainbow-kubo-raw/: Cargo.toml
object-rainbow-kubo-raw/examples/: stored.rs
object-rainbow-kubo-raw/src/: lib.rs
object-rainbow-local-map/: Cargo.toml
object-rainbow-local-map/src/: lib.rs
object-rainbow-marshall/: Cargo.toml
object-rainbow-marshall/examples/: test.rs
object-rainbow-marshall/src/: lib.rs
object-rainbow-parse-prefix/: Cargo.toml
object-rainbow-parse-prefix/src/: lib.rs
object-rainbow-point/: Cargo.toml
object-rainbow-point/src/: lib.rs  point_deserialize.rs  point_serialize.rs
object-rainbow-sled/: Cargo.toml
object-rainbow-store/: Cargo.toml
object-rainbow-store-opendal/: Cargo.toml
object-rainbow-store-opendal/examples/: test-mut.rs  test.rs
object-rainbow-store-opendal/src/: lib.rs
object-rainbow-store/examples/: external.rs
object-rainbow-store/src/: externally_stored.rs  lib.rs
object-rainbow-trie/: Cargo.toml
object-rainbow-trie/src/: lib.rs  serde.rs
object-rainbow-unique-diffs/: Cargo.toml
object-rainbow-unique-diffs/src/: lib.rs
object-rainbow/src/: ascii.rs  assert_impl.rs  default_chain.rs  default_terminated.rs  enumkind.rs  error.rs  error_io.md  hash.rs  hashed.rs  impls.rs  inject_option.rs  inline_extra.rs  length_prefixed.rs  lib.rs  map_extra.rs  niche.rs  numeric.rs  ordering.rs  parse_extra.rs  partial_byte_tag.rs  tuple_extra.rs  u63.rs  with_repr.rs  without_header.rs  zero_terminated.rs
object-rainbow/src/impls/: arc.rs  array.rs  bool.rs  boxed.rs  btree.rs  bytes.rs  char.rs  cid.rs  cow.rs  cstr.rs  cstring.rs  generic_array.rs  i8.rs  indexmap.rs  infallible.rs  option.rs  ordering.rs  phantom.rs  refs.rs  slice.rs  str.rs  string.rs  tuple.rs  tuple1.rs  u8.rs  ulid.rs  unit.rs  vec.rs
object-rainbow/src/numeric/: private.rs
object-rainbow/src/sha2_const/: util.rs
src/: enumkind.rs  enumtag.rs  error.rs  hash.rs  hashed.rs  impls.rs  length_prefixed.rs  lib.rs  niche.rs  numeric.rs  point_deserialize.rs  point_serialize.rs  sha2_const.rs  size.rs  tuple.rs  zero_terminated.rs
src/hash/: hex.rs
src/impls/: arc.rs  array.rs  bool.rs  boxed.rs  btree.rs  bytes.rs  char.rs  cstr.rs  cstring.rs  generic_array.rs  i8.rs  infallible.rs  option.rs  phantom.rs  refs.rs  slice.rs  str.rs  string.rs  tuple.rs  tuple1.rs  u8.rs  unit.rs  vec.rs
src/numeric/: private.rs
src/sha2_const/: constants.rs  sha.rs  util.rs
xtask/: Cargo.toml
xtask-release/: Cargo.toml
xtask/src/: main.rs
(+84 files in other folders)
