[workspace]
members = [
    "object-rainbow",
    "object-rainbow-append-tree",
    "object-rainbow-array-map",
    "object-rainbow-chain-tree",
    "object-rainbow-derive",
    "object-rainbow-encrypted",
    "object-rainbow-fetchall",
    "object-rainbow-hamt",
    "object-rainbow-history",
    "object-rainbow-history-store",
    "object-rainbow-json",
    "object-rainbow-local-map",
    "object-rainbow-marshall",
    "object-rainbow-point",
    "object-rainbow-sled",
    "object-rainbow-store",
    "object-rainbow-store-opendal",
    "object-rainbow-trie",
    "xtask",
    "xtask-release",
]

resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.87"
license = "MIT OR Apache-2.0"
repository = "https://github.com/parrrate/object-rainbow"
authors = ["Alisa Feistel <alisafeistel@gmail.com>"]

[workspace.dependencies]
object-rainbow = { version = "0.0.0-a.49", path = "object-rainbow" }
object-rainbow-append-tree = { version = "0.0.0-a.10", path = "object-rainbow-append-tree" }
object-rainbow-array-map = { version = "0.0.0-a.5", path = "object-rainbow-array-map" }
object-rainbow-chain-tree = { version = "0.0.0-a.9", path = "object-rainbow-chain-tree" }
object-rainbow-fetchall = { version = "0.0.0-a.5", path = "object-rainbow-fetchall" }
object-rainbow-hamt = { version = "0.0.0-a.2", path = "object-rainbow-hamt" }
object-rainbow-history = { version = "0.0.0-a.19", path = "object-rainbow-history" }
object-rainbow-local-map = { version = "0.0.0-a.1", path = "object-rainbow-local-map" }
object-rainbow-point = { version = "0.0.0-a.5", path = "object-rainbow-point" }
object-rainbow-store = { version = "0.0.0-a.7", path = "object-rainbow-store" }
object-rainbow-store-opendal = { version = "0.0.0-a.5", path = "object-rainbow-store-opendal" }
object-rainbow-trie = { version = "0.0.0-a.12", path = "object-rainbow-trie" }
