[workspace]
members = [
    "object-rainbow",
    "object-rainbow-amt",
    "object-rainbow-append-tree",
    "object-rainbow-array-map",
    "object-rainbow-chain-tree",
    "object-rainbow-derive",
    "object-rainbow-encrypted",
    "object-rainbow-fetchall",
    "object-rainbow-hamt",
    "object-rainbow-history",
    "object-rainbow-history-store",
    "object-rainbow-json",
    "object-rainbow-local-map",
    "object-rainbow-marshall",
    "object-rainbow-parse-prefix",
    "object-rainbow-point",
    "object-rainbow-store",
    "object-rainbow-store-opendal",
    "object-rainbow-trie",
    "xtask",
    "xtask-release",
]

resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/parrrate/object-rainbow"
authors = ["Alisa Feistel <alisafeistel@gmail.com>"]

[workspace.dependencies]
object-rainbow = { version = "0.0.0-a.63", path = "object-rainbow" }
object-rainbow-amt = { version = "0.0.0-a.3", path = "object-rainbow-amt" }
object-rainbow-append-tree = { version = "0.0.0-a.11", path = "object-rainbow-append-tree" }
object-rainbow-array-map = { version = "0.0.0-a.10", path = "object-rainbow-array-map" }
object-rainbow-chain-tree = { version = "0.0.0-a.9", path = "object-rainbow-chain-tree" }
object-rainbow-fetchall = { version = "0.0.0-a.6", path = "object-rainbow-fetchall" }
object-rainbow-hamt = { version = "0.0.0-a.8", path = "object-rainbow-hamt" }
object-rainbow-history = { version = "0.0.0-a.29", path = "object-rainbow-history" }
object-rainbow-local-map = { version = "0.0.0-a.5", path = "object-rainbow-local-map" }
object-rainbow-parse-prefix = { version = "0.0.0-a.2", path = "object-rainbow-parse-prefix" }
object-rainbow-point = { version = "0.0.0-a.11", path = "object-rainbow-point" }
object-rainbow-store = { version = "0.0.0-a.10", path = "object-rainbow-store" }
object-rainbow-store-opendal = { version = "0.0.0-a.5", path = "object-rainbow-store-opendal" }
object-rainbow-trie = { version = "0.0.0-a.17", path = "object-rainbow-trie" }

anyhow = "1.0.102"
async-executor = "1.14.0"
bitvec = { version = "1.0.1", default-features = false }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
darling = "0.23.0"
flume = "0.12.0"
futures-channel = "0.3.32"
futures-util = { version = "0.3.32", default-features = false }
genawaiter-try-stream = "0.1.0"
generic-array = "1.4.1"
hex = "0.4.3"
imbl = "7.0.0"
macro_rules_attribute = "0.2.2"
opendal = "0.56.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
serde = "1.0.228"
serde_json = "1.0.149"
sha2 = "0.11.0"
sha2-const = "0.1.3"
smol = "2.0.2"
smol-macros = "0.1.1"
syn = { version = "2.0.117", features = ["full"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
typenum = { version = "1.20.0", features = ["const-generics"] }
ulid = { version = "1.2.1", default-features = false }
