[workspace]
members = [
    "crates/object-rainbow",
    "crates/object-rainbow-amt",
    "crates/object-rainbow-append-tree",
    "crates/object-rainbow-array-map",
    "crates/object-rainbow-chain-tree",
    "crates/object-rainbow-derive",
    "crates/object-rainbow-encrypted",
    "crates/object-rainbow-encrypted-store",
    "crates/object-rainbow-fetchall",
    "crates/object-rainbow-hamt",
    "crates/object-rainbow-history",
    "crates/object-rainbow-history-store",
    "crates/object-rainbow-json",
    "crates/object-rainbow-kubo-raw",
    "crates/object-rainbow-local-map",
    "crates/object-rainbow-marshall",
    "crates/object-rainbow-parse-prefix",
    "crates/object-rainbow-point",
    "crates/object-rainbow-schema",
    "crates/object-rainbow-store",
    "crates/object-rainbow-store-opendal",
    "crates/object-rainbow-trie",
    "crates/xtask",
    "crates/xtask-release",
]

resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
license = "MIT OR Apache-2.0"
repository = "https://github.com/parrrate/object-rainbow"
authors = ["Alisa Feistel <alisafeistel@gmail.com>"]

[workspace.dependencies]
object-rainbow = { version = "0.0.0-a.67", path = "crates/object-rainbow" }
object-rainbow-amt = { version = "0.0.0-a.7", path = "crates/object-rainbow-amt" }
object-rainbow-append-tree = { version = "0.0.0-a.14", path = "crates/object-rainbow-append-tree" }
object-rainbow-array-map = { version = "0.0.0-a.13", path = "crates/object-rainbow-array-map" }
object-rainbow-chain-tree = { version = "0.0.0-a.11", path = "crates/object-rainbow-chain-tree" }
object-rainbow-encrypted = { version = "0.0.0-a.20", path = "crates/object-rainbow-encrypted" }
object-rainbow-fetchall = { version = "0.0.0-a.9", path = "crates/object-rainbow-fetchall" }
object-rainbow-hamt = { version = "0.0.0-a.12", path = "crates/object-rainbow-hamt" }
object-rainbow-history = { version = "0.0.0-a.33", path = "crates/object-rainbow-history" }
object-rainbow-local-map = { version = "0.0.0-a.8", path = "crates/object-rainbow-local-map" }
object-rainbow-parse-prefix = { version = "0.0.0-a.5", path = "crates/object-rainbow-parse-prefix" }
object-rainbow-point = { version = "0.0.0-a.14", path = "crates/object-rainbow-point" }
object-rainbow-store = { version = "0.0.0-a.12", path = "crates/object-rainbow-store" }
object-rainbow-store-opendal = { version = "0.0.0-a.8", path = "crates/object-rainbow-store-opendal" }
object-rainbow-trie = { version = "0.0.0-a.19", path = "crates/object-rainbow-trie" }

anyhow = "1.0.102"
async-executor = "1.14.0"
bitvec = { version = "1.0.1", default-features = false }
bytes = "1.11.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
cid = "0.11.3"
darling = "0.23.0"
dashmap = "6.1.0"
flume = "0.12.0"
futures-channel = "0.3.32"
futures-util = { version = "0.3.32", default-features = false }
genawaiter-try-stream = "0.1.0"
generic-array = "1.4.1"
ghost = "0.1.21"
hex = "0.4.3"
imbl = "7.0.0"
indexmap = "2.14.0"
macro_rules_attribute = "0.2.2"
opendal = "0.56.0"
proc-macro2 = "1.0.106"
quote = "1.0.45"
reqwest = { version = "0.13.4", default-features = false }
serde = "1.0.228"
serde_json = "1.0.149"
serde_with = "3.20.0"
sha2 = "0.11.0"
sha2-const = "0.1.3"
smol = "2.0.2"
smol-macros = "0.1.1"
syn = { version = "2.0.117", features = ["full"] }
thiserror = "2.0.18"
tokio = "1.52.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
typenum = { version = "1.20.0", features = ["const-generics"] }
ulid = { version = "1.2.1", default-features = false }
url = "2.5.8"
