[package]
name = "object-rainbow-amt-set"
version = "0.0.0-a.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HAMT-like non-iterable set for object-rainbow"

[dependencies]
object-rainbow.workspace = true
object-rainbow-hamt.workspace = true

[dev-dependencies]
macro_rules_attribute = "0.2.2"
smol = "2.0.2"
smol-macros = "0.1.1"
