[package]
name = "object-rainbow-amt"
version = "0.0.0-a.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "key-sorted distributed AMT"

[dependencies]
object-rainbow.workspace = true
object-rainbow-array-map.workspace = true
object-rainbow-parse-prefix.workspace = true
object-rainbow-point.workspace = true

futures-util = { version = "0.3.31", default-features = false, features = [
    "std",
] }

[dev-dependencies]
macro_rules_attribute = "0.2.2"
smol = "2.0.2"
smol-macros = "0.1.1"
