[package]
name = "object-rainbow-append-tree"
version = "0.0.0-a.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "append-only tree list for object-rainbow"

[dependencies]
object-rainbow.workspace = true
object-rainbow-point.workspace = true

typenum = { version = "1.18.0", features = ["const-generics"] }

[dev-dependencies]
macro_rules_attribute = "0.2.2"
smol = "2.0.2"
smol-macros = "0.1.1"
