[package]
name = "object-rainbow-append-tree"
version = "0.0.0-a.12"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "append-only tree list for object-rainbow"

[dependencies]
object-rainbow.workspace = true
object-rainbow-point.workspace = true

thiserror.workspace = true
typenum.workspace = true

[dev-dependencies]
macro_rules_attribute.workspace = true
smol.workspace = true
smol-macros.workspace = true
