[package]
name = "object-rainbow-array-map"
version = "0.0.0-a.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AMT-style bitmap-indexed map"

[dependencies]
object-rainbow = { workspace = true, features = ["bitvec"] }

bitvec.version = "1.0.1"
