[package]
name = "object-rainbow-chain-tree"
version = "0.0.0-a.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
object-rainbow.workspace = true
object-rainbow-append-tree.workspace = true
object-rainbow-point.workspace = true
