[package]
name = "object-rainbow-chain-tree"
version = "0.0.0-a.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "self-referential append-only list for object-rainbow"

[dependencies]
object-rainbow.workspace = true
object-rainbow-append-tree.workspace = true
object-rainbow-point.workspace = true
