[package]
name = "object-rainbow-chain-tree"
version = "0.0.0-a.10"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "self-referential append-only list for object-rainbow"

[dependencies]
object-rainbow.workspace = true
object-rainbow-append-tree.workspace = true
object-rainbow-point.workspace = true

futures-util = { workspace = true, features = ["async-await-macro"] }
genawaiter-try-stream.workspace = true

[dev-dependencies]
macro_rules_attribute.workspace = true
smol.workspace = true
smol-macros.workspace = true
