[package]
name = "object-rainbow-derive"
version = "0.0.0-a.20"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "derive macros for object-rainbow"

[lib]
proc-macro = true

[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true
syn = { version = "2.0.98", features = ["full"] }

[dev-dependencies]
object-rainbow = { version = "0.0.0-a.0", path = "../object-rainbow" }
typenum.workspace = true
