[package]
name = "object-rainbow-encrypted"
version = "0.0.0-a.12"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "encryption for object-rainbow"

[dependencies]
object-rainbow.workspace = true
object-rainbow-point.workspace = true

anyhow = "1.0.96"
futures-util = { version = "0.3.31" }

[dev-dependencies]
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
hex = "0.4.3"
sha2 = "0.10.8"
smol = "2.0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
