[package]
name = "object-rainbow-encrypted"
version = "0.0.0-a.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
object-rainbow.path = ".."

[dev-dependencies]
anyhow = "1.0.96"
chacha20poly1305 = "0.10.1"
hex = "0.4.3"
sha2 = "0.10.8"
smol = "2.0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
