[package]
name = "object-rainbow-encrypted"
version = "0.0.0-a.17"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "encryption for object-rainbow"

[dependencies]
object-rainbow.workspace = true
object-rainbow-point.workspace = true

anyhow.workspace = true
futures-util = { workspace = true, features = ["std"] }

[dev-dependencies]
object-rainbow-fetchall.workspace = true

chacha20poly1305 = { version = "0.10.1", features = ["std"] }
hex.workspace = true
sha2.workspace = true
smol.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
