[package]
name = "object-rainbow-fetchall"
version = "0.0.0-a.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "recursively walk object-rainbow trees"

[dependencies]
object-rainbow.workspace = true
object-rainbow-local-map.workspace = true

async-executor = "1.13.3"
flume = "0.12.0"
futures-channel = "0.3.31"

[dev-dependencies]
object-rainbow-point.workspace = true

anyhow = "1.0.96"
smol = "2.0.2"
