[package]
name = "object-rainbow-history-store"
version = "0.0.0-a.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
object-rainbow.workspace = true
object-rainbow-history.workspace = true
object-rainbow-store.workspace = true

[dev-dependencies]
object-rainbow-history = { workspace = true, features = ["trie"] }
object-rainbow-store-opendal.workspace = true
object-rainbow-trie.workspace = true

anyhow = "1.0.96"
opendal = "0.55.0"
smol = "2.0.2"
