[package]
name = "object-rainbow-history"
version = "0.0.0-a.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git-ish diff-by-diff change history"

[dependencies]
object-rainbow.workspace = true
object-rainbow-chain-tree.workspace = true
object-rainbow-point.workspace = true

futures-util = { version = "0.3.31", default-features = false }
