[package]
name = "object-rainbow-history"
version = "0.0.0-a.10"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git-ish diff-by-diff change history"

[dependencies]
object-rainbow.workspace = true
object-rainbow-chain-tree.workspace = true
object-rainbow-point.workspace = true
object-rainbow-trie = { workspace = true, optional = true }

futures-util = { version = "0.3.31", default-features = false }

[features]
trie = ["dep:object-rainbow-trie"]

[dev-dependencies]
object-rainbow = { workspace = true, features = ["ulid"] }

macro_rules_attribute = "0.2.2"
smol = "2.0.2"
smol-macros = "0.1.1"
ulid = { version = "1.2.1" }
