[package]
name = "object-rainbow-history"
version = "0.0.0-a.29"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git-ish diff-by-diff change history"

[dependencies]
object-rainbow.workspace = true
object-rainbow-amt = { workspace = true, optional = true }
object-rainbow-chain-tree.workspace = true
object-rainbow-hamt = { workspace = true, optional = true }
object-rainbow-point.workspace = true
object-rainbow-trie = { workspace = true, optional = true }

futures-util.workspace = true
thiserror.workspace = true

[features]
amt = ["dep:object-rainbow-amt"]
hamt = ["dep:object-rainbow-hamt"]
trie = ["dep:object-rainbow-trie"]
unique-diffs = ["hamt"]

[dev-dependencies]
object-rainbow = { workspace = true, features = ["ulid"] }

macro_rules_attribute = "0.2.2"
smol.workspace = true
smol-macros.workspace = true
ulid = { workspace = true, default-features = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
