[package]
name = "object-rainbow-json"
version = "0.0.0-a.0+ci.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "serde_json for object-rainbow"

[dependencies]
object-rainbow.workspace = true

serde = "1.0.218"
serde_json = "1.0.140"
thiserror = "2.0.17"
