[package]
name = "object-rainbow-json"
version = "0.0.0-a.18"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "serde_json for object-rainbow"

[dependencies]
object-rainbow = { workspace = true, features = ["serde"] }
object-rainbow-point = { workspace = true, features = [
    "point-serialize",
], optional = true }

futures-util = { version = "0.3.31", optional = true }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = { version = "2.0.17", optional = true }

[features]
distributed = ["dep:object-rainbow-point", "dep:futures-util", "dep:thiserror"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
