[package]
name = "object-rainbow-local-map"
version = "0.0.0-a.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "local storage for object-rainbow"

[dependencies]
object-rainbow.workspace = true

imbl = "6.1.0"
