[package]
name = "object-rainbow-marshall"
version = "0.0.0-a.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "serialized format for object-rainbow"

[dependencies]
object-rainbow.workspace = true
object-rainbow-fetchall.workspace = true
object-rainbow-local-map.workspace = true

[dev-dependencies]
object-rainbow-point.workspace = true

anyhow = "1.0.96"
smol = "2.0.2"
