[package]
name = "object-rainbow-point"
version = "0.0.0-a.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "default pointer type for object-rainbow"

[dependencies]
object-rainbow.workspace = true

futures-util = { version = "0.3.31", default-features = false }
serde = { version = "1.0.218", optional = true }
typenum = { version = "1.18.0", features = ["const-generics"] }

[features]
serde = ["dep:serde"]
point-serialize = ["serde"]
