[package]
name = "object-rainbow-point"
version = "0.0.0-a.12"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "default pointer type for object-rainbow"

[dependencies]
object-rainbow.workspace = true

futures-util.workspace = true
serde = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
point-serialize = ["serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
