[package]
name = "object-rainbow-sled"
version = "0.0.0-a.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "sled storage for object-rainbow"

[dependencies]
object-rainbow.workspace = true

sled = "0.34.7"

[package.metadata.tagit]
skip = true
