[package]
name = "object-rainbow-store-opendal"
version = "0.0.0-a.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
object-rainbow.workspace = true
object-rainbow-store.workspace = true

hex = "0.4.3"
opendal = "0.55.0"

[dev-dependencies]
anyhow = "1.0.96"
smol = "2.0.2"

[package.metadata.tagit]
skip = true
