[package]
name = "object-rainbow-store-opendal"
version = "0.0.0-a.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Apache OpenDAL™ storage for object-rainbow"

[dependencies]
object-rainbow.workspace = true
object-rainbow-store.workspace = true

hex.workspace = true
opendal = "0.55.0"

[dev-dependencies]
object-rainbow-point.workspace = true

anyhow.workspace = true
smol = "2.0.2"
