[package]
name = "object-rainbow-store"
version = "0.0.0-a.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "storage abstraction for object-rainbow"

[dependencies]
object-rainbow.workspace = true
object-rainbow-point.workspace = true
