[package]
name = "object-rainbow-trie"
version = "0.0.0-a.10"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "distributed Trie"

[dependencies]
object-rainbow.workspace = true
object-rainbow-array-map.workspace = true
object-rainbow-point.workspace = true

futures-util = { version = "0.3.31", default-features = false }
genawaiter-try-stream = "0.1.0"
serde = { version = "1.0.218", optional = true, features = ["derive"] }

[features]
serde = ["dep:serde"]

[dev-dependencies]
macro_rules_attribute = "0.2.2"
smol = "2.0.2"
smol-macros = "0.1.1"
