[package]
name = "object-rainbow-trie"
version = "0.0.0-a.17"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "distributed Trie"

[dependencies]
object-rainbow.workspace = true
object-rainbow-array-map.workspace = true
object-rainbow-point.workspace = true

futures-util = { workspace = true, features = ["std"] }
genawaiter-try-stream = "0.1.0"
serde = { workspace = true, features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]

[dev-dependencies]
macro_rules_attribute = "0.2.2"
smol.workspace = true
smol-macros.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
