[package]
name = "object-rainbow-unique-diffs"
version = "0.0.0-a.5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "object-rainbow-history deduplication"

[dependencies]
object-rainbow.workspace = true
object-rainbow-amt-set.workspace = true
object-rainbow-history.workspace = true
