[package]
name = "object-rainbow"
version = "0.0.0-a.61"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "distributed object model"
documentation = "https://docs.rs/object-rainbow"
exclude = ["/.github", "/bin", "/.gitattribues", "/.gitignore", "/codegen.sh"]

[dependencies]
object-rainbow-derive = { version = "=0.0.0-a.19", path = "../object-rainbow-derive" }

anyhow = "1.0.96"
bitvec = { version = "1.0.1", default-features = false, optional = true }
futures-util = { version = "0.3.31", default-features = false }
generic-array = { version = "1.2.0" }
hex = { version = "0.4.3", optional = true }
sha2 = "0.11.0"
sha2-const = "0.1.3"
serde = { version = "1.0.218", optional = true, features = ["derive"] }
thiserror = "2.0.11"
typenum = { version = "1.18.0", features = ["const-generics"] }
ulid = { version = "1.2.1", default-features = false, optional = true }

[features]
bitvec = ["dep:bitvec"]
hex = ["dep:hex"]
serde = ["dep:serde"]
ulid = ["dep:ulid"]

[dev-dependencies]
hex = "0.4.3"
smol = "2.0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
