[package]
name = "object-rainbow"
version = "0.0.0-a.63"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "distributed object model"
documentation = "https://docs.rs/object-rainbow"
exclude = ["/.github", "/bin", "/.gitattribues", "/.gitignore", "/codegen.sh"]

[dependencies]
object-rainbow-derive = { version = "=0.0.0-a.20", path = "../object-rainbow-derive" }

anyhow.workspace = true
bitvec = { workspace = true, optional = true }
futures-util.workspace = true
generic-array.workspace = true
hex = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sha2.workspace = true
sha2-const.workspace = true
thiserror = "2.0.11"
typenum = { version = "1.18.0", features = ["const-generics"] }
ulid = { version = "1.2.1", default-features = false, optional = true }

[features]
bitvec = ["dep:bitvec"]
hex = ["dep:hex"]
serde = ["dep:serde"]
ulid = ["dep:ulid"]

[dev-dependencies]
hex.workspace = true
smol = "2.0.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
