[package]
name = "object-rainbow"
version = "0.0.0-a.65"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "distributed object model"
documentation = "https://docs.rs/object-rainbow"
exclude = ["/.github", "/bin", "/.gitattribues", "/.gitignore", "/codegen.sh"]

[dependencies]
object-rainbow-derive = { version = "=0.0.0-a.21", path = "../object-rainbow-derive" }

anyhow.workspace = true
bitvec = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
cid = { workspace = true, optional = true }
futures-util.workspace = true
generic-array.workspace = true
ghost.workspace = true
hex = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
sha2.workspace = true
sha2-const.workspace = true
thiserror.workspace = true
typenum.workspace = true
ulid = { workspace = true, optional = true }

[features]
bitvec = ["dep:bitvec"]
bytes = ["dep:bytes"]
cid = ["dep:cid"]
hex = ["dep:hex"]
serde = ["dep:serde"]
ulid = ["dep:ulid"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
