[package]
name = "object-rainbow-amt"
version = "0.0.0-a.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "key-sorted distributed AMT"

[dependencies]
object-rainbow.workspace = true
object-rainbow-array-map.workspace = true
object-rainbow-parse-prefix.workspace = true
object-rainbow-point.workspace = true

futures-util = { workspace = true, features = ["std"] }

[dev-dependencies]
macro_rules_attribute.workspace = true
smol.workspace = true
smol-macros.workspace = true
