[package]
name = "object-rainbow-fetchall"
version = "0.0.0-a.8"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "recursively walk object-rainbow trees"

[dependencies]
object-rainbow.workspace = true
object-rainbow-local-map.workspace = true

async-executor.workspace = true
flume.workspace = true
futures-channel.workspace = true

[dev-dependencies]
object-rainbow-point.workspace = true

anyhow.workspace = true
smol.workspace = true
