[package]
name = "object-rainbow-history-store"
version = "0.0.0-a.6"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "object-rainbow-{history+store} integration"

[dependencies]
object-rainbow.workspace = true
object-rainbow-history.workspace = true
object-rainbow-store.workspace = true

[dev-dependencies]
object-rainbow-history = { workspace = true, features = ["trie"] }
object-rainbow-store-opendal.workspace = true
object-rainbow-trie.workspace = true

anyhow.workspace = true
opendal.workspace = true
smol.workspace = true
