[package]
name = "object-rainbow-history"
version = "0.0.0-a.33"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Git-ish diff-by-diff change history"

[dependencies]
object-rainbow.workspace = true
object-rainbow-apply.workspace = true
object-rainbow-chain-tree.workspace = true
object-rainbow-hamt = { workspace = true, optional = true }

futures-util.workspace = true
thiserror.workspace = true

[features]
unique-diffs = ["object-rainbow-apply/hamt", "dep:object-rainbow-hamt"]

[dev-dependencies]
object-rainbow = { workspace = true, features = ["ulid"] }
object-rainbow-amt.workspace = true
object-rainbow-apply = { workspace = true, features = ["amt", "trie"] }
object-rainbow-trie.workspace = true

macro_rules_attribute.workspace = true
smol.workspace = true
smol-macros.workspace = true
ulid = { workspace = true, default-features = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
